--- a/package.json
+++ b/package.json
@@ -4,23 +4,24 @@
   "private": true,
   "type": "commonjs",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "nodemon server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "node server.js",
     "lint": "next lint"
   },
   "dependencies": {
     "autoprefixer": "^10.4.19",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.10.0",
     "next": "14.2.3",
+    "postcss": "^8.4.0",
+    "postcss-loader": "^6.2.0",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
     "react": "^18",
-    "react-dom": "^18",
-    "tailwindcss": "^2.1.2",
-    "postcss": "^8.4.0",
-    "postcss-loader": "^6.2.0",
-    "sass": "^1.77.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -28,8 +29,18 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "node-sass": "^9.0.0",
+    "nodemon": "^3.1.3",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5"
-  }
+    "sass": "^1.77.4",
+    "sass-loader": "^14.2.1",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5",
+    "webpack": "^5.91.0"
+  },
+  "description": "## Geopop Concept <img width=\"1400\" alt=\"Screen Shot 2022-08-31 at 11 45 20 PM\" src=\"https://user-images.githubusercontent.com/96035297/187800002-cbd73e92-f2f9-444e-a307-c492338a03a9.png\">",
+  "main": "next.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
